# krusty-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  printer.toml  simlog.txt
.github/chatmodes/: rusttest.chatmode.md
.github/instructions/: memory-bank.instructions.md  notes.instructions.md
api_docs/: print_job_manager.md
benches/: gcode_bench.rs
docs/: future_map.md  krusty_shared_migration_plan.md  motion_queue_api.md  next.md  project_map.md  shared_code_migration_plan.md  simulator.md
krusty_host/: Cargo.toml
krusty_host/src/: config.rs  file_manager.rs  host_os.rs  lib.rs  main.rs  mod.rs  print_job.rs  printer.toml  system_info.rs
krusty_host/src/communication/: event_bus_stub.rs  event_interface.rs  event_system.rs  mod.rs  serial_interface.rs  serial_linux.rs
krusty_host/src/gcode/: gcode_executor.rs  macros.md  mod.rs
krusty_host/src/hardware/: board_config.rs  hardware_traits.rs  mod.rs  temperature.rs
krusty_host/src/motion/: controller.rs  junction.rs  kinematics.rs  mod.rs  s_curve.rs  stepper.rs
krusty_host/src/motion/planner/: mod.rs  snap_crackle.rs
krusty_host/src/scheduler/: clock_sync_stub.rs  mod.rs  std_time_sync.rs
krusty_host/src/web/: api.rs  auth.rs  mod.rs  models.rs  rate_limiter.rs
krusty_mcu/: Cargo.toml  lib.rs
krusty_mcu/src/: lib.rs
krusty_shared/: Cargo.toml
krusty_shared/src/: api_models.rs  auth_backend.rs  board_config.rs  config.rs  event_interface.rs  event_queue.rs  file_manager.rs  gcode.rs  gcode_utils.rs  hardware_traits.rs  lib.rs  print_job.rs  s_curve.rs  serial_interface.rs  shaper.rs  snap_crackle.rs  system_info.rs  trajectory.rs
krusty_shared/src/gcode/: executor.rs  mod.rs  processor.rs  types.rs
krusty_shared/src/motion/: adaptive.rs  controller.rs  mod.rs  planner.rs
krusty_simulator/: Cargo.toml  SIMULATOR_PORT_PLAN.md  results.jsonl  test.gcode  test_sim.toml
krusty_simulator/src/: lib.rs  main.rs
krusty_simulator/src/sim/: harness.rs
krusty_simulator/src/simulator/: event_queue.rs  mod.rs
memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory_bank/tasks/: TASK001-implement-motion-queueing-and-execution.md  TASK002-print-job-management.md  TASK003-gcode-macro-streaming-parsing.md  TASK004-web-api-endpoints.md  TASK005-Modularize-hardware-interfaces-and-integrate-with-main-workflow.md  TASK006-Host-OS-abstraction-serial-protocol-time-sync-event-system.md  _index.md
plan_docs/: advanced_motion_planning_plan.md  krusty_modular.md
plan_docs/finished_plans/: krusty_shared_migration_plan.md  shared_code_migration_plan.md
sim/docs/: prunt_simulator_usage.md
sim/krusty_simulator/: Cargo.toml  SIMULATOR_PORT_PLAN.md  results.csv  test_sim.toml  thermal_test_output.txt
src/: build.rs  config.rs  file_manager.rs  gcode.rs  hardware.rs  host_os.rs  integration_test.rs  lib.rs  main.rs  module_manager.rs  multi_mcu_manager.rs  print_job.rs  printer.rs  system_info.rs  web.rs
src/communication/: mod.rs  serial.rs  serial_linux.rs  serial_protocol.rs
src/config/: mod.rs
src/file/: mod.rs
src/gcode/: advanced_parser.rs  advanced_parser_tests.rs  macro_processor.rs  macros.rs  mod.rs  parser.old.rs  parser.rs  parser_tests.rs
src/hardware/: hardware_traits.rs  mod.rs  serial.rs  temperature.rs  test.rs
src/motion/: adaptive_planner.rs  advanced_planner.rs  benchmark.rs  controller.rs  integration.rs  junction.rs  kinematics.rs  mod.rs  planner.rs  s_curve.rs  shaper.rs  snap_crackle.rs  stepper.rs  test.rs  trajectory.rs
src/motion/planner/: adaptive.rs  mod.rs  snap_crackle.rs  snap_crackle_tests.rs
src/scheduler/: clock_sync.rs  time_interface.rs
src/sim/: harness.rs
src/simulator/: mod.rs
src/temperature/: control.rs
src/web/: api.rs  login_rate_limit.rs  mod.rs  models.rs  printer_channel.rs  token_blacklist.rs
tests/: adaptive_optimizer.rs  benchmark.rs  config.rs  file_manager.rs  gcode_macros.rs  gcode_mod.rs  gcode_parser.rs  hardware_integration.rs  integration.rs  mod.rs  motion_controller.rs  parser_tests.rs  print_job.rs  snap_crackle.rs  web_auth.rs  web_rate_limit.rs
