# Cargo.toml
[package]
name = "krusty-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio-serial = "5.4.5"
rand = "0.9.2"
uuid = { version = "1.17", features = ["v4"] }
thiserror = "2.0.12"
tempfile = "3.20"
axum = "0.8.4"
serde_json = "1.0.141"
futures-core = "0.3.31"
futures-util = "0.3.31"
futures = "0.3.31"
async-trait = "0.1"

[features]
default = []
benchmark = []
web-interface = []

[dev-dependencies]
criterion = "0.6.0"
tokio-test = "0.4.4"




[[bin]]
name = "printer-host"
path = "src/main.rs"

[profile.release]
overflow-checks = true
