
[package]
name = "krusty-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio-serial = "5.4.5"
rand = "0.9.2"
uuid = { version = "1.17", features = ["v4"] }
thiserror = "2.0.12"
tempfile = "3.20"
axum = "0.8.4"
serde_json = "1.0.141"
futures-core = "0.3.31"
futures-util = "0.3.31"
futures = "0.3.31"
async-trait = "0.1"
futures-executor = "0.3"
async-stream = "0.3.6"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

[features]
default = []
benchmark = []
web-interface = []

[dev-dependencies]
criterion = "0.6.0"
tokio-test = "0.4.4"

axum = "0.8"

[[bin]]
name = "sim_harness"
path = "src/sim/harness.rs"

[[bin]]
name = "printer-host"
path = "src/main.rs"

axum-extra = "0.8"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

