[package]
name = "krusty-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serial2-tokio = "0.1.15"
rand = "0.9.2"
uuid = { version = "1.17", features = ["v4"] }
thiserror = "2.0.12"
tempfile = "3.20"
axum = "0.8.4"
serde_json = "1.0.141"
futures-core = "0.3.31"
futures-util = "0.3.31"
futures = "0.3.31"
async-trait = "0.1.88"
futures-executor = "0.3.31"
async-stream = "0.3.6"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }



[features]
default = []
benchmark = []
web-interface = []

[dev-dependencies]
criterion = "0.6.0"
tokio-test = "0.4.4"
axum = "0.8.4"
hyper = "1.3.1"
tower = "0.5.2"
http-body-util = "0.1.1"

[[bin]]
name = "sim_harness"
path = "src/sim/harness.rs"

[[bin]]
name = "printer-host"
path = "src/main.rs"


[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[workspace]
members = [
    "krusty_simulator"
]

