[package]
name = "krusty_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
rand = "0.9.2"
tracing = "0.1.41"
async-stream = "0.3.5"
futures-util = "0.3.30"
futures-core = "0.3.30"
tokio = { version = "1.37.0", features = ["sync", "rt", "macros"] }
serial2-tokio = "0.1.15"
toml = "0.8"
