[package]
name = "krusty_simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
krusty_mcu = { path = "../krusty_mcu" }
krusty_shared = { path = "../krusty_shared" }
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tracing = "0.1.41"
config = "0.15.0"
toml = "0.8.12"
crossbeam-channel = "0.5.15"
